[gd_scene load_steps=2 format=3 uid="uid://4fcrw5fklxrw"]

[ext_resource type="Script" uid="uid://cyvaa46k8l65a" path="res://Scenes/PhaseDiagrams/Xe.gd" id="1"]

[node name="Xenon" type="Node2D"]
script = ExtResource("1")

[node name="Solid" type="Polygon2D" parent="."]
color = Color(0.682353, 0.866667, 1, 1)
polygon = PackedVector2Array(0, 0, 800, 0, 800, 400, 0, 400)

[node name="Liquid" type="Polygon2D" parent="."]
color = Color(0.776471, 1, 0.8, 1)
polygon = PackedVector2Array(128, 208, 140, 172, 236, 104, 236, 144)

[node name="Gas" type="Polygon2D" parent="."]
color = Color(1, 0.839216, 0.564706, 1)
polygon = PackedVector2Array(96, 400, 128, 208, 236, 144, 800, 144, 800, 400)

[node name="Superfluid" type="Polygon2D" parent="."]
polygon = PackedVector2Array(236, 144, 236, 104, 800, 72, 800, 144)

[node name="TriplePoint" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 3, 0, 3, 3, 0, 3)

[node name="MeltPoint" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 3, 0, 3, 3, 0, 3)

[node name="BoilPoint" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 3, 0, 3, 3, 0, 3)

[node name="SuperPoint" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 3, 0, 3, 3, 0, 3)
